// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldDisplayName Component should handle clearing display name through redux state: clear display name 1`] = `
Array [
  Array [
    Array [
      Object {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
      },
      Object {
        "display_name_contains": null,
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_display_name_contains",
        "viewId": "toolbarFieldDisplayName",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldDisplayName Component should handle updating display name through redux state: dispatch display name 1`] = `
Array [
  Array [
    Array [
      Object {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
      },
      Object {
        "display_name_contains": "dolor sit",
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_display_name_contains",
        "viewId": "toolbarFieldDisplayName",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldDisplayName Component should handle updating display name using the enter key: enter display name 1`] = `
Array [
  Array [
    Array [
      Object {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
      },
      Object {
        "display_name_contains": "dolor sit",
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_display_name_contains",
        "viewId": "toolbarFieldDisplayName",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldDisplayName Component should render a non-connected component: non-connected 1`] = `
<InputGroup>
  <TextInput
    aria-label="t(curiosity-toolbar.placeholder, {\\"context\\":\\"displayName\\"})"
    className=""
    isDisabled={false}
    isReadOnly={false}
    name={null}
    onChange={[Function]}
    onClear={[Function]}
    onKeyUp={[Function]}
    onMouseUp={[Function]}
    placeholder="t(curiosity-toolbar.placeholder, {\\"context\\":\\"displayName\\"})"
    type="search"
    value={null}
  />
  <Button
    aria-label="t(curiosity-toolbar.button, {\\"context\\":\\"displayName\\"})"
    onClick={[Function]}
    variant="control"
  >
    <SearchIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </Button>
</InputGroup>
`;
